# sysmond

./: .drone.yml  .gitignore  Jenkinsfile  LICENSE  Makefile.am  README.md  configure.ac  ini.h  sysmon.c  sysmond  sysmond.conf  sysmond.service
.gitea/workflows/: ci.yml
